Anonymous | Login | 2021-01-26 06:02 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0026914 | Community | [OCCT] OCCT:Modeling Algorithms | public | 2015-11-22 16:02 | 2016-04-20 15:50 | ||||
Reporter | Roman Lygin | ||||||||
Assigned To | bugmaster | ||||||||
Priority | normal | Severity | major | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | OS | OS Version | |||||||
Product Version | [OCCT] 7.0.0 | ||||||||
Target Version | [OCCT] 7.0.0 | Fixed in Version | [OCCT] 7.0.0 | ||||||
Summary | 0026914: [Regression 7.0alpha] Hang in surface approximation | ||||||||
Description | 7.0 preview (master as of Nov 22, 2015) reveals a regression - hang (infinite loop) in surface approximation. In 6.9.1 approximation takes a second or less in debug mode. | ||||||||
Steps To Reproduce | restore a_2773_draw s approxsurf rs s 5e-5 0 0 15 15 100 0 | ||||||||
Tags | No tags attached. | ||||||||
Test case number | bugs modalg_6 bug26914 | ||||||||
Attached Files | ![]() | ||||||||
![]() |
|||||||
|
![]() |
|
(0048452) msv (developer) 2015-11-22 22:00 |
Dear Artem, please check this issue. Try to find what patch could lead to the hanging. |
(0048514) git (administrator) 2015-11-24 14:42 |
Branch CR26914 has been created by azv. SHA-1: 4b542294478cd57b60f9789540d3521ba2e9e802 Detailed log of new commits: Author: azv Date: Tue Nov 24 14:42:20 2015 +0300 0026914: [Regression 7.0alpha] Hang in surface approximation Wrong statement in evaluator of offset surfaces |
(0048515) git (administrator) 2015-11-24 14:45 |
Branch CR26914 has been updated forcibly by azv. SHA-1: 006e8e76448e26331235d200c7dcec381f6e37e9 |
(0048516) azv (developer) 2015-11-24 14:46 |
Dear Mikhail, Please, review branch CR26914. |
(0048538) msv (developer) 2015-11-24 18:04 |
Reviewed. |
(0048570) apv (tester) 2015-11-25 16:55 |
Dear BugMaster, Branch CR26914 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: 006e8e76448e26331235d200c7dcec381f6e37e9 Number of compiler warnings: occt component: Linux: 0 (0 on master) Windows: 0 (0 on master) MasOS: 134 (134 on master) products component: Linux: 39 (39 on master) Windows: 0 (0 on master) Regressions/Differences: http://occt-tests/CR26914-master-occt-64/Debian70-64/summary.html [^] http://occt-tests/CR26914-master-occt-64/Windows-64-VC10/summary.html [^] bugs modalg_4 bug8842_8 Testing on Linux: Total MEMORY difference: 93051041 / 93521748 [-0.50%] Total CPU difference: 19768.039999999626 / 19720.20999999994 [+0.24%] Testing on Windows: Total MEMORY difference: 58368767 / 58377356 [-0.01%] Total CPU difference: 18402.252362398973 / 18187.71978719887 [+1.18%] |
(0048571) apv (tester) 2015-11-25 16:56 |
Dear azv, Branch CR26914 has been rejected due to: - regressions/differences/improvements |
(0048572) git (administrator) 2015-11-25 17:00 |
Branch CR26914 has been updated forcibly by azv. SHA-1: 53ab69b94322cd8b7db43f02f522a4c0f4222a70 |
(0048573) azv (developer) 2015-11-25 17:00 |
Dear Mikhail, Branch CR26914 has been updated. Please, review it. |
(0048575) msv (developer) 2015-11-25 17:30 |
Reviewed. |
(0048601) git (administrator) 2015-11-26 12:34 |
Branch CR26914 has been updated by apv. SHA-1: 913f019a486106c57a3558ae6039187efe6d5777 Detailed log of new commits: Author: apv Date: Thu Nov 26 12:34:46 2015 +0300 Test-case for issue 0026914 |
(0048602) apv (tester) 2015-11-26 12:37 edited on: 2015-11-26 12:38 |
Dear BugMaster, Branch CR26914 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: 53ab69b94322cd8b7db43f02f522a4c0f4222a70 Number of compiler warnings: occt component: Linux: 0 (0 on master) Windows: 0 (0 on master) MasOS: 134 (134 on master) products component: Linux: 39 (39 on master) Windows: 0 (0 on master) Regressions/Differences: Not detected Testing cases: bugs modalg_6 bug26914 - OK http://occt-tests/CR26914-master-occt-64/Debian70-64/bugs/modalg_6/bug26914.html [^] http://occt-tests/CR26914-master-occt-64/Windows-64-VC10/bugs/modalg_6/bug26914.html [^] Testing on Linux: Total MEMORY difference: 93077342 / 93533241 [-0.49%] Total CPU difference: 19743.599999999497 / 19727.98999999994 [+0.08%] Testing on Windows: Total MEMORY difference: 58361757 / 58376918 [-0.03%] Total CPU difference: 18438.569395198847 / 18194.33422959887 [+1.34%] |
(0053066) git (administrator) 2016-04-17 14:07 |
Branch CR26914 has been deleted by kgv. SHA-1: 913f019a486106c57a3558ae6039187efe6d5777 |
![]() |
|||
occt: master 525ec87c
Timestamp: 2015-11-24 11:42:20 Author: azv Committer: bugmaster [ Details ] [ Diff ] |
0026914: [Regression 7.0alpha] Hang in surface approximation Change a constructor of evaluator for offset surfaces Test-case for issue 0026914 |
||
mod - src/GeomEvaluator/GeomEvaluator_OffsetSurface.cxx | [ Diff ] [ File ] | ||
add - tests/bugs/modalg_6/bug26914 | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2015-11-22 16:02 | Roman Lygin | New Issue | |
2015-11-22 16:02 | Roman Lygin | Assigned To | => msv |
2015-11-22 16:02 | Roman Lygin | File Added: a_2773_draw.zip | |
2015-11-22 22:00 | msv | Note Added: 0048452 | |
2015-11-22 22:00 | msv | Assigned To | msv => azv |
2015-11-22 22:00 | msv | Status | new => assigned |
2015-11-24 14:42 | git | Note Added: 0048514 | |
2015-11-24 14:45 | git | Note Added: 0048515 | |
2015-11-24 14:45 | azv | Relationship added | child of 0026252 |
2015-11-24 14:46 | azv | Note Added: 0048516 | |
2015-11-24 14:46 | azv | Assigned To | azv => msv |
2015-11-24 14:46 | azv | Status | assigned => resolved |
2015-11-24 18:04 | msv | Note Added: 0048538 | |
2015-11-24 18:04 | msv | Assigned To | msv => bugmaster |
2015-11-24 18:04 | msv | Status | resolved => reviewed |
2015-11-24 18:24 | apv | Assigned To | bugmaster => apv |
2015-11-25 16:55 | apv | Note Added: 0048570 | |
2015-11-25 16:55 | apv | Assigned To | apv => azv |
2015-11-25 16:55 | apv | Status | reviewed => assigned |
2015-11-25 16:56 | apv | Note Added: 0048571 | |
2015-11-25 17:00 | git | Note Added: 0048572 | |
2015-11-25 17:00 | azv | Note Added: 0048573 | |
2015-11-25 17:00 | azv | Assigned To | azv => msv |
2015-11-25 17:00 | azv | Status | assigned => resolved |
2015-11-25 17:30 | msv | Note Added: 0048575 | |
2015-11-25 17:30 | msv | Assigned To | msv => bugmaster |
2015-11-25 17:30 | msv | Status | resolved => reviewed |
2015-11-25 17:35 | apv | Assigned To | bugmaster => apv |
2015-11-26 12:34 | git | Note Added: 0048601 | |
2015-11-26 12:35 | apv | Test case number | => bugs modalg_6 bug26914 |
2015-11-26 12:37 | apv | Note Added: 0048602 | |
2015-11-26 12:37 | apv | Assigned To | apv => bugmaster |
2015-11-26 12:37 | apv | Status | reviewed => tested |
2015-11-26 12:38 | apv | Note Edited: 0048602 | View Revisions |
2015-11-27 12:21 | bugmaster | Changeset attached | => occt master 525ec87c |
2015-11-27 12:21 | bugmaster | Status | tested => verified |
2015-11-27 12:21 | bugmaster | Resolution | open => fixed |
2016-04-17 14:07 | git | Note Added: 0053066 | |
2016-04-20 15:42 | aiv | Fixed in Version | => 7.0.0 |
2016-04-20 15:50 | aiv | Status | verified => closed |
Copyright © 2000 - 2021 MantisBT Team |