0026914: [Regression 7.0alpha] Hang in surface approximation

Change a constructor of evaluator for offset surfaces

Test-case for issue #26914